[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Marcellus-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.466667, 0.745098, 1 )

[node name="DemoButton" type="Button" parent="."]
margin_left = 150.0
margin_top = 200.0
margin_right = 250.0
margin_bottom = 300.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = SubResource( 1 )
text = "DEMO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton1" type="Button" parent="."]
margin_left = 350.0
margin_top = 200.0
margin_right = 450.0
margin_bottom = 300.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = SubResource( 1 )
text = "LEVEL 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton2" type="Button" parent="."]
margin_left = 550.0
margin_top = 200.0
margin_right = 650.0
margin_bottom = 300.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = SubResource( 1 )
text = "LEVEL 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton3" type="Button" parent="."]
margin_left = 750.0
margin_top = 200.0
margin_right = 850.0
margin_bottom = 300.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = SubResource( 1 )
text = "LEVEL 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton4" type="Button" parent="."]
margin_left = 150.0
margin_top = 400.0
margin_right = 250.0
margin_bottom = 500.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = SubResource( 1 )
text = "LEVEL 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton5" type="Button" parent="."]
margin_left = 350.0
margin_top = 400.0
margin_right = 450.0
margin_bottom = 500.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = SubResource( 1 )
text = "LEVEL 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton6" type="Button" parent="."]
margin_left = 550.0
margin_top = 400.0
margin_right = 650.0
margin_bottom = 500.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = SubResource( 1 )
text = "LEVEL 6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton7" type="Button" parent="."]
margin_left = 750.0
margin_top = 400.0
margin_right = 850.0
margin_bottom = 500.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = SubResource( 1 )
text = "LEVEL 7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -75.0
margin_right = 50.0001
margin_bottom = -25.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 1 )
text = "EXIT GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -146.5
margin_right = 146.5
margin_bottom = 63.0
custom_fonts/font = SubResource( 2 )
text = "Trade-Winds"
align = 1
valign = 1

[node name="Intro" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -532.5
margin_top = -200.0
margin_right = 532.5
margin_bottom = -137.0
custom_fonts/font = SubResource( 3 )
text = "Control the winds to guide the lost ships home to a port (marked with a star)."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="DemoButton" to="." method="_on_DemoButton_pressed"]
[connection signal="pressed" from="LevelButton1" to="." method="_on_LevelButton1_pressed"]
[connection signal="pressed" from="LevelButton2" to="." method="_on_LevelButton2_pressed"]
[connection signal="pressed" from="LevelButton3" to="." method="_on_LevelButton3_pressed"]
[connection signal="pressed" from="LevelButton4" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="LevelButton5" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="LevelButton6" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="LevelButton7" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
